# memos_trading_refactor

./: .bash_aliases  .env.example  .gitignore  Cargo.toml  Configuration Helpers - Kullanım Kılavuzu.odt  DAILY_REPORTS_README.md  Design an Automated Trading Platform  automation_orchestrator.rs  backfill.sh  backfill_scoring.sh  backtest_sonuc.docx  backtest_sonuc.odt  context_backup.html  db_migrate.sh  kullandığımız ana terimleri teknik anlamları ve “neden var”.odt  memos  memos_trading için geliştirme stratejisi v0.1.0.docx  memos_trading için geliştirme stratejisi v0.1.0.odt  p5.py  p5_crypto.py  package-lock.json  package.json  quick_start.sh  run_all_tests.sh  run_menu.sh  run_rtc.sh  test_results.json  test_results_array.json
interfaces/rtc_headless/: Cargo.toml
interfaces/rtc_headless/src/: main.rs
interfaces/rtc_tui/: Cargo.toml
interfaces/rtc_tui/src/: main.rs
interfaces/rtc_tui/src/handlers/: input.rs
interfaces/rtc_tui/src/ui/: ai_center.rs  archives.rs  charts.rs  components.rs  dashboard.rs  market_watch.rs  mod.rs  pipeline.rs  risk_center.rs  special_trades.rs
memos_trading_core/: Cargo.toml
memos_trading_core/_legacy_examples/: akbnk_yahoo_fetch.rs  binance_testnet_smoke.rs  diag.rs  finnhub_test.rs  indicators_v0.rs  indicators_v2_ek.rs  main_v1.rs
memos_trading_core/benches/: backtest.rs  indicators.rs
memos_trading_core/config/: app_snapshot.json  evolution_state.json  fsm_state.json  robotic_profiles.json  trade_quality.json
memos_trading_core/examples/: bb_pool.rs  db_coverage.rs  download_candles.rs  download_funding.rs  download_isyatirim.rs  download_mt5.rs  download_twelvedata.rs  download_yahoo.rs  edge_scan.rs  funding_carry.rs  import_csv.rs  interval_scan.rs  multi_tf_ab.rs  param_optimize.rs  sr_ab.rs  xfunding.rs  xs_factors.rs  xs_momentum.rs  xs_orthogonality.rs
memos_trading_core/src/: anomaly_analysis.rs  anomaly_detector.rs  api.rs  api_manager.rs  audit_trail.rs  auto_test_and_logging.rs  auto_trading_engine.rs  automation_scheduler.rs  backtest_manager.rs  backup.rs  backup_manager.rs  batch_backtest.rs  batch_config.rs  binance_connector.rs  bist.rs  bist.rs.bak  bybit_connector.rs  candle_synth.rs  coinbase_connector.rs  config.rs  cost_manager.rs  dashboard_server.rs  data_flow_manager.rs  decision_communication.rs  distributed_worker.rs  engine.rs  exchange_connector.rs  exchanges.rs  exchanges.rs.bak  fcm_push.rs  gdpr.rs  health_dashboard.rs  health_monitor.rs  hsm.rs  immutable_log.rs  indicators.rs  jwt_auth.rs  kucoin_connector.rs  lib.rs  liquidity_manager.rs  (+30 more)
memos_trading_core/src/advanced/: indicators.rs  mod.rs  risk.rs  strategies.rs
memos_trading_core/src/core/: batch_config.rs  bridge.rs  commands.rs  core_indicators.rs  env.rs  indicators.rs  math.rs  metrics.rs  mod.rs  model.rs  sim_data.rs  time.rs  types.rs
memos_trading_core/src/core/security/: gdpr.rs  hsm.rs  jwt_auth.rs  mfa.rs  mod.rs  rbac.rs  secrets.rs  secure_store.rs  security_manager.rs  (+1 more)
memos_trading_core/src/evolution/: adaptive_brain.rs  autonomous_controller.rs  fitness_evaluator.rs  mod.rs  mutation_engine.rs  population_manager.rs  strategy_genome.rs
memos_trading_core/src/persistence/: config.rs  memory.rs  mod.rs  reader.rs  writer.rs
memos_trading_core/src/robot/: adaptive_params.rs  api.rs  automl.rs  autonomous_control.rs  autonomous_trader.rs  backtest_scheduler.rs  binance_executor.rs  config_helpers.rs  config_manager.rs  dashboard.rs  diagnostics.rs  error.rs  executor.rs  file_logger.rs  hyperopt.rs  indicators.rs  integration_advanced.rs  interfaces.rs  logger.rs  mod.rs  monitor.rs  optimizer.rs  pattern_matcher.rs  pipeline.rs  position_manager.rs  price_feed.rs  reporter.rs  reporting.rs  risk_adapter.rs  risk_guardrails.rs  robotic_loop.rs  signal_evaluator.rs  sr_detector.rs  srivastava_demo.rs  state_manager.rs  strategies.rs  strategy_scorer.rs  strategy_selector.rs  streaming.rs  symbol_orchestrator.rs  (+4 more)
memos_trading_core/tests/: auto_trading_engine_tests.rs  balance_autofix.rs  balance_sync_task.rs  bist_akbnk_1d_test.rs  bist_async_cli_test.rs  bist_async_yahoo_test.rs  bist_download_test.rs  bist_realtime_test.rs  blocked_symbols.rs  bt_ab_entry_quality.rs  bt_ab_exit_mgmt.rs  bt_ab_orderbook.rs  bt_ab_regime_style_fit.rs  bt_live_path.rs  candle_write_schema.rs  config_helpers_integration.rs  delisted_eligibility.rs  download_job.rs  drift_retrain_cooldown.rs  dynamic_position_with_profiles.rs  engine_integration.rs  exchange_info_filters.rs  execution_policy_chain.rs  gbt_inference.rs  hsm_integration.rs  indicators_correctness.rs  integration_pipeline.rs  intelligence_hub_wiring.rs  limit_entry_env_wiring.rs  list_symbols_db.rs  live_mode_wiring.rs  live_orders_map.rs  math_units.rs  ml_backtest_integration.rs  otomasyon_akisi_test.rs  parallel_symbol_cycle.rs  partial_fill_anomaly.rs  partial_fill_handling.rs  partial_fill_pnl.rs  plugin_diagnostics.rs  (+25 more)
memos_trading_core/tests/common/: mod.rs
memos_trading_core/tests/fixtures/: README.md  candles_btc_1m_sample.json
(+329 files in other folders)
