[workspace]
members = [
    "memos_trading_core",
    "interfaces/rtc_tui",
    "interfaces/rtc_headless",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Memos Trading"]
license = "MIT"

[workspace.dependencies]
# Ortak bağımlılıkları buradan yöneterek sürüm karmaşasını bitiriyoruz
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
memos_trading_core = { path = "./memos_trading_core" }
