

[dependencies]
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
itertools = "0.12"
prometheus_exporter = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
once_cell = "1.19"
serde_json = "1.0"
pkcs11 = { version = "0.5.0", optional = true }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
rand = "0.8"
rand_distr = "0.4"
lazy_static = "1.4"
jsonwebtoken = "9.3"
headers = "0.4"
aes-gcm = "0.10"
sha2 = "0.10"
axum = "0.7"
otpauth = "0.4"
qrcode = "0.12"
base32 = "0.4"

[package]
name = "memos_trading_core"
version = "0.1.0"
edition = "2021"

# Enterprise özellikler (HSM, Prometheus, SSO/LDAP, SIEM, FCM) opsiyoneldir.
# Varsayılan derleme bunları içermez; sadece ihtiyaç duyulduğunda etkinleştir:
#   cargo build --features enterprise
[features]
default = []
enterprise = ["dep:pkcs11", "dep:prometheus_exporter"]

[[bin]]
name = "main_robotic"
path = "src/main_robotic.rs"

[[bin]]
name = "rtc_cli"
path = "src/bin/rtc_cli/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time", "signal", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
ratatui = "0.26"
crossterm = "0.27"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "otomasyon_akisi_test"
path = "tests/otomasyon_akisi_test.rs"
harness = true
