[package]
name = "memos_trading_core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Çekirdek motor için gerekenler
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
itertools = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror = "1.0"
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
tokio.workspace = true
tokio-util = "0.7"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
# Diğer algoritmik ve ağ bağımlılıklarını buraya (mevcut listenizden) ekleyin...
aes-gcm = "0.10.3"
rand = "0.8.5"
rand_distr = "0.4" # Evrimsel mutasyon için kararlı sürüm
rayon = "1.12.0"
futures-util = "0.3.32"
tokio-tungstenite = "0.29.0"
log = "0.4.29"
axum = "0.8.9"
prometheus = "0.14.0"

[features]
default = []
enterprise = [] # HSM, Prometheus vb. buraya taşınacak

[[bench]]
name = "indicators"
harness = false

[[bench]]
name = "backtest"
harness = false
