[package]
name = "rtc_headless"
version.workspace = true
edition.workspace = true

[dependencies]
memos_trading_core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
